Text von Microservice wurde hinzugefuegt und korregiert

--- a/sections/Theory/Kommunikation-von-services.tex
+++ b/sections/Theory/Kommunikation-von-services.tex
@@ -1,4 +1,5 @@
 \subsection{Kommunikation von Services}
+\label{sec:kommunikation}
 
 In diesem Abschnitt möchte ich darauf eingehen welche anforderungen eine entkoppelte Infrastuktur an das Netztwerk und an die Kommunikation über standards hat.
 
@@ -13,6 +14,7 @@ Es sollen auf folgende Kommunikationsmethoden eingegangen werden.
 \end{itemize}
 
 \subsubsection{CAP - Theorem}
+\label{sec:cap}
 
 System, Konsistenz, Verfügbarkeit und Partitionstoleranz können in einem verteilten System nicht gleichzeitig erfüllt sein.
 Die einzelnen Begriffe erklären \begin{itemize}
